--- a/sample-table.html
+++ b/sample-table.html
@@ -89,7 +89,7 @@ function setHighLow(response) {
                 <table class="issue-price-matrix">
         <thead>
             <tr>
-                <th class="cap-rate">Cap rate (%)</th>
+                <th class="cap-rate">Cap rate</th>
                                     <th class="cap-duration">2-years</th>
                                     <th class="cap-duration">3-years</th>
                                     <th class="cap-duration">4-years</th>
