Update and rename sample-table.html to sample-table-1M.html

--- a/sample-table-1M.html
+++ b/sample-table-1M.html
@@ -81,6 +81,9 @@ function setHighLow(response) {
         <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
         <link href="/css" rel="stylesheet">
     </head>
+<p style="text-align: center;">The table below shows the indicative issue prices of Cap-It Certificates protecting an amount of £1,000,000.  The table is intended to be purely factual and informative.  It should not be interpreted by any person as an invitation or inducement to engage in investment activity.</p>
+
+		
 <body>
     <div id="app" class="d-flex flex-column h-100">
         
