--- a/sample-table-250K.html
+++ b/sample-table-250K.html
@@ -26,61 +26,61 @@
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">£3,900</span>
+<span id="myText1">&pound3,900</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">£5,600</span>
+<span id="myText2">&pound5,600</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">£7,200</span>
+<span id="myText3">&pound7,200</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">£8,900</span>
+<span id="myText4">&pound8,900</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">£18,700</span>
+<span id="myText5">&pound18,700</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">£2,900</span>
+<span id="myText6">&pound2,900</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText7">£3,800</span>
+<span id="myText7">&pound3,800</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">£4,800</span>
+<span id="myText8">&pound4,800</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">£5,800</span>
+<span id="myText9">&pound5,800</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">£11,300</span>
+<span id="myText10">&pound11,300</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-4">4%</td>
 <td class="cap-rate-4">
-<span id="myText11">£2,500</span>
+<span id="myText11">&pound2,500</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText12">£3,000</span>
+<span id="myText12">&pound3,000</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText13">£3,600</span>
+<span id="myText13">&pound3,600</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">£4,300</span>
+<span id="myText14">&pound4,300</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">£3,900</span>
+<span id="myText15">&pound3,900</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 26 February 2022 at 21:00 UK time</p>
+<p style="text-align: center;">Last updated: 26 February 2022 at 22:00 UK time</p>
 </div>
 </div>
 </main>
