--- a/sample-table-2M.html
+++ b/sample-table-2M.html
@@ -26,61 +26,61 @@
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">£18,500</span>
+<span id="myText1">&pound18,500</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">£34,400</span>
+<span id="myText2">&pound34,400</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">£50,100</span>
+<span id="myText3">&pound50,100</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">£65,800</span>
+<span id="myText4">&pound65,800</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">£149,500</span>
+<span id="myText5">&pound149,500</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">£9,400</span>
+<span id="myText6">&pound9,400</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText7">£17,200</span>
+<span id="myText7">&pound17,200</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">£26,100</span>
+<span id="myText8">&pound26,100</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">£35,800</span>
+<span id="myText9">&pound35,800</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">£89,000</span>
+<span id="myText10">&pound89,000</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-4">4%</td>
 <td class="cap-rate-4">
-<span id="myText11">£6,200</span>
+<span id="myText11">&pound6,200</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText12">£10,500</span>
+<span id="myText12">&pound10,500</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText13">£15,600</span>
+<span id="myText13">&pound15,600</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">£21,300</span>
+<span id="myText14">&pound21,300</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">£18,500</span>
+<span id="myText15">&pound18,500</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 26 February 2022 at 21:00 UK time</p>
+<p style="text-align: center;">Last updated: 26 February 2022 at 22:00 UK time</p>
 </div>
 </div>
 </main>
