--- a/sample-table-500K.html
+++ b/sample-table-500K.html
@@ -26,61 +26,61 @@
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">£6,300</span>
+<span id="myText1">&pound6,300</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">£9,700</span>
+<span id="myText2">&pound9,700</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">£12,900</span>
+<span id="myText3">&pound12,900</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">£16,500</span>
+<span id="myText4">&pound16,500</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">£37,400</span>
+<span id="myText5">&pound37,400</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">£4,200</span>
+<span id="myText6">&pound4,200</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText7">£6,000</span>
+<span id="myText7">&pound6,000</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">£8,000</span>
+<span id="myText8">&pound8,000</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">£10,000</span>
+<span id="myText9">&pound10,000</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">£22,300</span>
+<span id="myText10">&pound22,300</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-4">4%</td>
 <td class="cap-rate-4">
-<span id="myText11">£3,300</span>
+<span id="myText11">&pound3,300</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText12">£4,400</span>
+<span id="myText12">&pound4,400</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText13">£5,700</span>
+<span id="myText13">&pound5,700</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">£6,900</span>
+<span id="myText14">&pound6,900</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">£6,300</span>
+<span id="myText15">&pound6,300</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 26 February 2022 at 21:00 UK time</p>
+<p style="text-align: center;">Last updated: 26 February 2022 at 22:00 UK time</p>
 </div>
 </div>
 </main>
