--- a/sample-table-1M.html
+++ b/sample-table-1M.html
@@ -26,61 +26,61 @@
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">£10,600</span>
+<span id="myText1">&pound10,600</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">£17,700</span>
+<span id="myText2">&pound17,700</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">£25,100</span>
+<span id="myText3">&pound25,100</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">£32,900</span>
+<span id="myText4">&pound32,900</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">£74,800</span>
+<span id="myText5">&pound74,800</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">£6,300</span>
+<span id="myText6">&pound6,300</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText7">£10,000</span>
+<span id="myText7">&pound10,000</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">£13,900</span>
+<span id="myText8">&pound13,900</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">£18,300</span>
+<span id="myText9">&pound18,300</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">£44,500</span>
+<span id="myText10">&pound44,500</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-4">4%</td>
 <td class="cap-rate-4">
-<span id="myText11">£4,600</span>
+<span id="myText11">&pound4,600</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText12">£6,800</span>
+<span id="myText12">&pound6,800</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText13">£9,200</span>
+<span id="myText13">&pound9,200</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">£11,800</span>
+<span id="myText14">&pound11,800</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">£10,600</span>
+<span id="myText15">&pound10,600</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 26 February 2022 at 21:00 UK time</p>
+<p style="text-align: center;">Last updated: 26 February 2022 at 22:00 UK time</p>
 </div>
 </div>
 </main>
