--- a/sample-table-3M.html
+++ b/sample-table-3M.html
@@ -26,61 +26,61 @@
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">£27,200</span>
+<span id="myText1">&pound27,200</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">£51,600</span>
+<span id="myText2">&pound51,600</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">£75,200</span>
+<span id="myText3">&pound75,200</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">£98,700</span>
+<span id="myText4">&pound98,700</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">£224,300</span>
+<span id="myText5">&pound224,300</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">£12,600</span>
+<span id="myText6">&pound12,600</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText7">£25,100</span>
+<span id="myText7">&pound25,100</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">£39,200</span>
+<span id="myText8">&pound39,200</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">£53,700</span>
+<span id="myText9">&pound53,700</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">£133,500</span>
+<span id="myText10">&pound133,500</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-4">4%</td>
 <td class="cap-rate-4">
-<span id="myText11">£7,700</span>
+<span id="myText11">&pound7,700</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText12">£14,300</span>
+<span id="myText12">&pound14,300</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText13">£22,400</span>
+<span id="myText13">&pound22,400</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">£31,700</span>
+<span id="myText14">&pound31,700</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">£27,200</span>
+<span id="myText15">&pound27,200</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 26 February 2022 at 21:00 UK time</p>
+<p style="text-align: center;">Last updated: 26 February 2022 at 22:00 UK time</p>
 </div>
 </div>
 </main>
