--- a/sample-table-4M.html
+++ b/sample-table-4M.html
@@ -26,61 +26,61 @@
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">£36,200</span>
+<span id="myText1">&pound36,200</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">£68,800</span>
+<span id="myText2">&pound68,800</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">£100,200</span>
+<span id="myText3">&pound100,200</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">£131,600</span>
+<span id="myText4">&pound131,600</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">£299,000</span>
+<span id="myText5">&pound299,000</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">£16,000</span>
+<span id="myText6">&pound16,000</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText7">£33,400</span>
+<span id="myText7">&pound33,400</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">£52,200</span>
+<span id="myText8">&pound52,200</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">£71,600</span>
+<span id="myText9">&pound71,600</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">£178,000</span>
+<span id="myText10">&pound178,000</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-4">4%</td>
 <td class="cap-rate-4">
-<span id="myText11">£9,300</span>
+<span id="myText11">&pound9,300</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText12">£18,400</span>
+<span id="myText12">&pound18,400</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText13">£29,800</span>
+<span id="myText13">&pound29,800</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">£42,300</span>
+<span id="myText14">&pound42,300</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">£36,200</span>
+<span id="myText15">&pound36,200</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 26 February 2022 at 21:00 UK time</p>
+<p style="text-align: center;">Last updated: 26 February 2022 at 22:00 UK time</p>
 </div>
 </div>
 </main>
