--- a/sample-table-5M.html
+++ b/sample-table-5M.html
@@ -26,61 +26,61 @@
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">£45,300</span>
+<span id="myText1">&pound45,300</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">£85,900</span>
+<span id="myText2">&pound85,900</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">£125,300</span>
+<span id="myText3">&pound125,300</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">£164,500</span>
+<span id="myText4">&pound164,500</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">£373,700</span>
+<span id="myText5">&pound373,700</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">£19,500</span>
+<span id="myText6">&pound19,500</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText7">£41,800</span>
+<span id="myText7">&pound41,800</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">£65,300</span>
+<span id="myText8">&pound65,300</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">£89,400</span>
+<span id="myText9">&pound89,400</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">£222,500</span>
+<span id="myText10">&pound222,500</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-4">4%</td>
 <td class="cap-rate-4">
-<span id="myText11">£10,800</span>
+<span id="myText11">&pound10,800</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText12">£22,500</span>
+<span id="myText12">&pound22,500</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText13">£37,300</span>
+<span id="myText13">&pound37,300</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">£52,900</span>
+<span id="myText14">&pound52,900</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">£45,300</span>
+<span id="myText15">&pound45,300</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 26 February 2022 at 21:00 UK time</p>
+<p style="text-align: center;">Last updated: 26 February 2022 at 22:00 UK time</p>
 </div>
 </div>
 </main>
