--- a/testcapitIndexChart.html
+++ b/testcapitIndexChart.html
@@ -11,9 +11,63 @@ var data = new google.visualization.DataTable();
 data.addColumn('datetime', 'Time');
 data.addColumn('number', 'Cap-It Index');
 data.addRows([
-[new Date(2022,1,28, 00, 00, 00), 1000],
-[new Date(2022,1,28, 01, 00, 00), 5000],
-[new Date(2022,1,28, 20, 00, 00), 1000]
+[new Date(2022,1,17,11,30,0),500.63],
+[new Date(2022,1,17,11,45,0),502.77],
+[new Date(2022,1,17,12,0,0),502.1],
+[new Date(2022,1,17,12,15,0),501.63],
+[new Date(2022,1,17,12,30,0),500.84],
+[new Date(2022,1,17,12,45,0),500.29],
+[new Date(2022,1,17,13,0,0),500.88],
+[new Date(2022,1,17,13,15,0),500.71],
+[new Date(2022,1,17,13,30,0),501.01],
+[new Date(2022,1,17,13,45,0),498.54],
+[new Date(2022,1,17,14,0,0),497.32],
+[new Date(2022,1,17,14,15,0),503.81],
+[new Date(2022,1,17,14,30,0),502.56],
+[new Date(2022,1,17,14,45,0),499.97],
+[new Date(2022,1,17,15,0,0),492.7],
+[new Date(2022,1,17,15,15,0),494.18],
+[new Date(2022,1,17,15,30,0),496.98],
+[new Date(2022,1,17,15,45,0),500.05],
+[new Date(2022,1,17,16,0,0),497.97],
+[new Date(2022,1,17,16,15,0),498.23],
+[new Date(2022,1,17,16,30,0),500.14],
+[new Date(2022,1,17,16,45,0),498.03],
+[new Date(2022,1,17,17,0,0),499.47],
+[new Date(2022,1,17,17,15,0),501.39],
+[new Date(2022,1,17,17,30,0),501.46],
+[new Date(2022,1,17,17,45,0),501.27],
+[new Date(2022,1,17,18,0,0),501.48],
+[new Date(2022,1,17,19,0,0),501.34],
+[new Date(2022,1,17,20,0,0),501.34],
+[new Date(2022,1,17,21,0,0),501.34],
+[new Date(2022,1,17,22,0,0),501.34],
+[new Date(2022,1,17,23,0,0),501.34],
+[new Date(2022,1,18,0,0,0),501.85],
+[new Date(2022,1,18,1,0,0),501.85],
+[new Date(2022,1,18,2,0,0),501.85],
+[new Date(2022,1,18,3,0,0),501.85],
+[new Date(2022,1,18,4,0,0),501.85],
+[new Date(2022,1,18,5,0,0),501.85],
+[new Date(2022,1,18,6,0,0),501.85],
+[new Date(2022,1,18,7,0,0),501.85],
+[new Date(2022,1,18,7,15,0),501.85],
+[new Date(2022,1,18,7,30,0),504.04],
+[new Date(2022,1,18,7,45,0),502.08],
+[new Date(2022,1,18,8,0,0),501.62],
+[new Date(2022,1,18,8,15,0),501.99],
+[new Date(2022,1,18,8,30,0),500.73],
+[new Date(2022,1,18,8,45,0),501.81],
+[new Date(2022,1,18,9,0,0),496.27],
+[new Date(2022,1,18,9,15,0),492.55],
+[new Date(2022,1,18,9,30,0),491.68],
+[new Date(2022,1,18,9,45,0),488.1],
+[new Date(2022,1,18,10,0,0),485.19],
+[new Date(2022,1,18,10,15,0),488.68],
+[new Date(2022,1,18,10,30,0),486.65],
+[new Date(2022,1,18,10,45,0),486.7],
+[new Date(2022,1,18,11,0,0),486.95],
+[new Date(2022,1,18,11,0,0),486.95]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMM yyyy hh:mm"
