--- a/testcapitIndexChart.html
+++ b/testcapitIndexChart.html
@@ -70,7 +70,7 @@ data.addRows([
 [new Date(2022,1,18,11,0,0),486.95]
 ]);
 var date_formatter = new google.visualization.DateFormat({
-pattern: "dd MMM yyyy hh:mm"
+pattern: "dd MMMM yyyy HH:mm"
 });
 date_formatter.format(data, 0);
 var high = ((data.getColumnRange(1).max));
@@ -85,16 +85,16 @@ var max_price = high + trail;
 var min_price = low - trail;
 min_price = Math.max.apply(null, [min_price, min_y]);
 var options = {
-title: '1D',
+title: '2D',
 areaOpacity: 0.5,
 focusTarget: 'category',
 animation: {startup: true, duration: 100,easing: 'in'},
-crosshair: {trigger: 'both', orientation: 'vertical', opacity: 1, color : 'fcb247' },
+crosshair: {trigger: 'both', orientation: 'vertical', opacity: 1, color : '#fcb247' },
 tooltip:{trigger:'both'},
 series: {0:{color: '#0173a3', visibleInLegend: false}},
 legend: {position: 'none'},
 hAxis: {title: '',
-format: 'HH:00',
+format: 'yyyy HH:00',
 gridlines:{count : 4, color:'FFFFFF'}},
 vAxis: {minValue: min_price, maxValue: max_price,
 gridlines:{count : 4},minorGridlines:{interval:0}}};
