--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -88,7 +88,8 @@ data.addRows([
 [new Date(2022,1,28,15,45,0),463.37],
 [new Date(2022,1,28,16,0,0),464.59],
 [new Date(2022,1,28,16,15,0),461.67],
-[new Date(2022,1,28,16,15,0),461.67]
+[new Date(2022,1,28,16,30,0),462.67],
+[new Date(2022,1,28,16,30,0),462.67]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -141,8 +142,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>462.7</td>
-<td class = "leftTextAlign">28 February 2022 16:30</td>
+<td>460.8</td>
+<td class = "leftTextAlign">28 February 2022 16:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
