--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -89,7 +89,9 @@ data.addRows([
 [new Date(2022,1,28,16,15,0),461.67],
 [new Date(2022,1,28,16,30,0),462.67],
 [new Date(2022,1,28,16,45,0),460.83],
-[new Date(2022,1,28,16,45,0),460.83]
+[new Date(2022,1,28,17,0,0),458.21],
+[new Date(2022,1,28,17,15,0),458.63],
+[new Date(2022,1,28,17,15,0),458.63]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -142,8 +144,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>458.6</td>
-<td class = "leftTextAlign">28 February 2022 17:15</td>
+<td>457.6</td>
+<td class = "leftTextAlign">28 February 2022 17:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
@@ -152,8 +154,8 @@ drawChart();
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
-<td>458.6</td>
-<td class = "leftTextAlign">28 February 2022 17:15</td>
+<td>457.6</td>
+<td class = "leftTextAlign">28 February 2022 17:30</td>
 </tr>
 </tbody>
 </table>
