--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -91,7 +91,8 @@ data.addRows([
 [new Date(2022,1,28,16,45,0),460.83],
 [new Date(2022,1,28,17,0,0),458.21],
 [new Date(2022,1,28,17,15,0),458.63],
-[new Date(2022,1,28,17,15,0),458.63]
+[new Date(2022,1,28,17,30,0),457.62],
+[new Date(2022,1,28,17,30,0),457.62]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -144,8 +145,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>457.6</td>
-<td class = "leftTextAlign">28 February 2022 17:30</td>
+<td>456.8</td>
+<td class = "leftTextAlign">28 February 2022 17:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
@@ -154,8 +155,8 @@ drawChart();
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
-<td>457.6</td>
-<td class = "leftTextAlign">28 February 2022 17:30</td>
+<td>456.8</td>
+<td class = "leftTextAlign">28 February 2022 17:45</td>
 </tr>
 </tbody>
 </table>
