--- a/capitIndexChart1Y.html
+++ b/capitIndexChart1Y.html
@@ -324,7 +324,7 @@ tooltip:{trigger:'both'},
 series: {0:{color: '#0173a3', visibleInLegend: false}},
 legend: {position: 'none'},
 hAxis: {title: '',
-format: 'dd MMMM yyyy',
+format: 'MMMM yyyy',
 gridlines:{count : 4, color:'FFFFFF'}},
 vAxis: {minValue: min_price, maxValue: max_price,
 gridlines:{count : 4},minorGridlines:{interval:0}}};
@@ -349,7 +349,7 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>436.3</td>
+<td>440.5</td>
 <td class = "leftTextAlign">01 March 2022</td>
 </tr>
 <tr>
