--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -22,6 +22,7 @@ text-align: left;
 }
 #chart_div{
 margin: auto;
+height: 200px;
 width: 100%;
 padding: 0px;
 }
@@ -36,7 +37,6 @@ var data = new google.visualization.DataTable();
 data.addColumn('datetime', 'Time');
 data.addColumn('number', 'Cap-It Index');
 data.addRows([
-[new Date(2022,1,28,12,30,0),479.51],
 [new Date(2022,1,28,12,45,0),479.35],
 [new Date(2022,1,28,13,0,0),479.2],
 [new Date(2022,1,28,13,15,0),479.17],
@@ -150,8 +150,8 @@ drawChart();
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>479.5</td>
-<td class = "leftTextAlign">28 February 2022 12:30</td>
+<td>479.4</td>
+<td class = "leftTextAlign">28 February 2022 12:45</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
