--- a/capitIndexChart1W.html
+++ b/capitIndexChart1W.html
@@ -22,6 +22,7 @@ text-align: left;
 }
 #chart_div{
 margin: auto;
+height: 200px;
 width: 100%;
 padding: 0px;
 }
@@ -36,7 +37,6 @@ var data = new google.visualization.DataTable();
 data.addColumn('datetime', 'Time');
 data.addColumn('number', 'Cap-It Index');
 data.addRows([
-[new Date(2022,1,22,12,30,0),493.79],
 [new Date(2022,1,22,12,45,0),494.09],
 [new Date(2022,1,22,13,0,0),496.42],
 [new Date(2022,1,22,13,15,0),498.96],
