--- a/sample-table-3M.html
+++ b/sample-table-3M.html
@@ -7,6 +7,32 @@
 <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
 <link href="/css" rel="stylesheet">
 </head>
+<style>
+th,td,body{
+white-space: nowrap;
+}
+@media only screen and (max-width: 400px) {
+th,td,body{
+white-space: nowrap;
+font-size:10px;
+}}
+@media only screen and (min-width:400px) and (max-width: 500px) {
+th,td{
+white-space: nowrap;
+font-size:14px;
+}
+body{
+font-size:12px;
+}}
+@media only screen and (min-width:500px) and (max-width: 600px) {
+th,td{
+white-space: nowrap;
+font-size:18px;
+}
+body{
+font-size:14px;
+}}
+</style>
 <body>
 <div id="app" class="d-flex flex-column h-100">
 <main class=" h-100">
