--- a/sample-table-1M.html
+++ b/sample-table-1M.html
@@ -41,11 +41,11 @@ font-size:14px;
 <thead>
 <tr>
 <th class="cap-rate">Cap rate</th>
-<th class="cap-duration">2-years</th>
-<th class="cap-duration">3-years</th>
-<th class="cap-duration">4-years</th>
-<th class="cap-duration">5-years</th>
-<th class="cap-duration">10-years</th>
+<th class="cap-duration">2 years</th>
+<th class="cap-duration">3 years</th>
+<th class="cap-duration">4 years</th>
+<th class="cap-duration">5 years</th>
+<th class="cap-duration">10 years</th>
 </tr>
 </thead>
 <tbody>
