--- a/sample-table-3M.html
+++ b/sample-table-3M.html
@@ -7,32 +7,6 @@
 <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
 <link href="/css" rel="stylesheet">
 </head>
-<style>
-th,td,body{
-white-space: nowrap;
-}
-@media only screen and (max-width: 400px) {
-th,td,body{
-white-space: nowrap;
-font-size:10px;
-}}
-@media only screen and (min-width:400px) and (max-width: 500px) {
-th,td{
-white-space: nowrap;
-font-size:14px;
-}
-body{
-font-size:12px;
-}}
-@media only screen and (min-width:500px) and (max-width: 600px) {
-th,td{
-white-space: nowrap;
-font-size:18px;
-}
-body{
-font-size:14px;
-}}
-</style>
 <body>
 <div id="app" class="d-flex flex-column h-100">
 <main class=" h-100">
@@ -41,30 +15,30 @@ font-size:14px;
 <thead>
 <tr>
 <th class="cap-rate">Cap rate</th>
-<th class="cap-duration">2 years</th>
-<th class="cap-duration">3 years</th>
-<th class="cap-duration">4 years</th>
-<th class="cap-duration">5 years</th>
-<th class="cap-duration">10 years</th>
+<th class="cap-duration">2-years</th>
+<th class="cap-duration">3-years</th>
+<th class="cap-duration">4-years</th>
+<th class="cap-duration">5-years</th>
+<th class="cap-duration">10-years</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">&pound20,200</span>
+<span id="myText1">&pound20,100</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">&pound39,500</span>
+<span id="myText2">&pound39,300</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">&pound59,300</span>
+<span id="myText3">&pound59,200</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">&pound79,900</span>
+<span id="myText4">&pound80,000</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">&pound194,400</span>
+<span id="myText5">&pound194,800</span>
 </td>
 </tr>
 <tr>
@@ -73,16 +47,16 @@ font-size:14px;
 <span id="myText6">&pound10,400</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText7">&pound20,300</span>
+<span id="myText7">&pound20,200</span>
 </td>
 <td class="cap-rate-3">
 <span id="myText8">&pound32,300</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">&pound45,400</span>
+<span id="myText9">&pound45,500</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">&pound119,800</span>
+<span id="myText10">&pound120,200</span>
 </td>
 </tr>
 <tr>
@@ -97,16 +71,16 @@ font-size:14px;
 <span id="myText13">&pound19,700</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">&pound28,100</span>
+<span id="myText14">&pound28,300</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">&pound20,200</span>
+<span id="myText15">&pound20,100</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 01 March 2022 at 17:00 UK time</p>
+<p style="text-align: center;">Last updated: 01 March 2022 at 17:15 UK time</p>
 </div>
 </div>
 </main>
