--- a/sample-table-4M.html
+++ b/sample-table-4M.html
@@ -7,32 +7,6 @@
 <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
 <link href="/css" rel="stylesheet">
 </head>
-<style>
-th,td,body{
-white-space: nowrap;
-}
-@media only screen and (max-width: 400px) {
-th,td,body{
-white-space: nowrap;
-font-size:10px;
-}}
-@media only screen and (min-width:400px) and (max-width: 500px) {
-th,td{
-white-space: nowrap;
-font-size:14px;
-}
-body{
-font-size:12px;
-}}
-@media only screen and (min-width:500px) and (max-width: 600px) {
-th,td{
-white-space: nowrap;
-font-size:18px;
-}
-body{
-font-size:14px;
-}}
-</style>
 <body>
 <div id="app" class="d-flex flex-column h-100">
 <main class=" h-100">
@@ -41,36 +15,36 @@ font-size:14px;
 <thead>
 <tr>
 <th class="cap-rate">Cap rate</th>
-<th class="cap-duration">2 years</th>
-<th class="cap-duration">3 years</th>
-<th class="cap-duration">4 years</th>
-<th class="cap-duration">5 years</th>
-<th class="cap-duration">10 years</th>
+<th class="cap-duration">2-years</th>
+<th class="cap-duration">3-years</th>
+<th class="cap-duration">4-years</th>
+<th class="cap-duration">5-years</th>
+<th class="cap-duration">10-years</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">&pound26,700</span>
+<span id="myText1">&pound26,500</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">&pound52,600</span>
+<span id="myText2">&pound52,400</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">&pound79,000</span>
+<span id="myText3">&pound78,900</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">&pound106,500</span>
+<span id="myText4">&pound106,600</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">&pound259,200</span>
+<span id="myText5">&pound259,700</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">&pound12,900</span>
+<span id="myText6">&pound12,800</span>
 </td>
 <td class="cap-rate-3">
 <span id="myText7">&pound26,700</span>
@@ -79,16 +53,16 @@ font-size:14px;
 <span id="myText8">&pound43,100</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">&pound60,500</span>
+<span id="myText9">&pound60,700</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">&pound159,700</span>
+<span id="myText10">&pound160,200</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-4">4%</td>
 <td class="cap-rate-4">
-<span id="myText11">&pound8,100</span>
+<span id="myText11">&pound8,000</span>
 </td>
 <td class="cap-rate-4">
 <span id="myText12">&pound15,800</span>
@@ -97,16 +71,16 @@ font-size:14px;
 <span id="myText13">&pound25,900</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">&pound37,500</span>
+<span id="myText14">&pound37,700</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">&pound26,700</span>
+<span id="myText15">&pound26,500</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 01 March 2022 at 17:00 UK time</p>
+<p style="text-align: center;">Last updated: 01 March 2022 at 17:15 UK time</p>
 </div>
 </div>
 </main>
