--- a/sample-table-500K.html
+++ b/sample-table-500K.html
@@ -7,32 +7,6 @@
 <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
 <link href="/css" rel="stylesheet">
 </head>
-<style>
-th,td,body{
-white-space: nowrap;
-}
-@media only screen and (max-width: 400px) {
-th,td,body{
-white-space: nowrap;
-font-size:10px;
-}}
-@media only screen and (min-width:400px) and (max-width: 500px) {
-th,td{
-white-space: nowrap;
-font-size:14px;
-}
-body{
-font-size:12px;
-}}
-@media only screen and (min-width:500px) and (max-width: 600px) {
-th,td{
-white-space: nowrap;
-font-size:18px;
-}
-body{
-font-size:14px;
-}}
-</style>
 <body>
 <div id="app" class="d-flex flex-column h-100">
 <main class=" h-100">
@@ -41,11 +15,11 @@ font-size:14px;
 <thead>
 <tr>
 <th class="cap-rate">Cap rate</th>
-<th class="cap-duration">2 years</th>
-<th class="cap-duration">3 years</th>
-<th class="cap-duration">4 years</th>
-<th class="cap-duration">5 years</th>
-<th class="cap-duration">10 years</th>
+<th class="cap-duration">2-years</th>
+<th class="cap-duration">3-years</th>
+<th class="cap-duration">4-years</th>
+<th class="cap-duration">5-years</th>
+<th class="cap-duration">10-years</th>
 </tr>
 </thead>
 <tbody>
@@ -64,7 +38,7 @@ font-size:14px;
 <span id="myText4">&pound13,700</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">&pound32,400</span>
+<span id="myText5">&pound32,500</span>
 </td>
 </tr>
 <tr>
@@ -82,7 +56,7 @@ font-size:14px;
 <span id="myText9">&pound8,800</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">&pound20,000</span>
+<span id="myText10">&pound20,100</span>
 </td>
 </tr>
 <tr>
@@ -97,7 +71,7 @@ font-size:14px;
 <span id="myText13">&pound5,200</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">&pound6,400</span>
+<span id="myText14">&pound6,500</span>
 </td>
 <td class="cap-rate-4">
 <span id="myText15">&pound5,300</span>
@@ -106,7 +80,7 @@ font-size:14px;
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 01 March 2022 at 17:00 UK time</p>
+<p style="text-align: center;">Last updated: 01 March 2022 at 17:15 UK time</p>
 </div>
 </div>
 </main>
