--- a/sample-table-5M.html
+++ b/sample-table-5M.html
@@ -7,32 +7,6 @@
 <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
 <link href="/css" rel="stylesheet">
 </head>
-<style>
-th,td,body{
-white-space: nowrap;
-}
-@media only screen and (max-width: 400px) {
-th,td,body{
-white-space: nowrap;
-font-size:10px;
-}}
-@media only screen and (min-width:400px) and (max-width: 500px) {
-th,td{
-white-space: nowrap;
-font-size:14px;
-}
-body{
-font-size:12px;
-}}
-@media only screen and (min-width:500px) and (max-width: 600px) {
-th,td{
-white-space: nowrap;
-font-size:18px;
-}
-body{
-font-size:14px;
-}}
-</style>
 <body>
 <div id="app" class="d-flex flex-column h-100">
 <main class=" h-100">
@@ -41,48 +15,48 @@ font-size:14px;
 <thead>
 <tr>
 <th class="cap-rate">Cap rate</th>
-<th class="cap-duration">2 years</th>
-<th class="cap-duration">3 years</th>
-<th class="cap-duration">4 years</th>
-<th class="cap-duration">5 years</th>
-<th class="cap-duration">10 years</th>
+<th class="cap-duration">2-years</th>
+<th class="cap-duration">3-years</th>
+<th class="cap-duration">4-years</th>
+<th class="cap-duration">5-years</th>
+<th class="cap-duration">10-years</th>
 </tr>
 </thead>
 <tbody>
 <tr>
 <td class="cap-rate-2">2%</td>
 <td class="cap-rate-2">
-<span id="myText1">&pound33,300</span>
+<span id="myText1">&pound33,100</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">&pound65,700</span>
+<span id="myText2">&pound65,500</span>
 </td>
 <td class="cap-rate-2">
 <span id="myText3">&pound98,700</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText4">&pound133,100</span>
+<span id="myText4">&pound133,200</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText5">&pound323,900</span>
+<span id="myText5">&pound324,600</span>
 </td>
 </tr>
 <tr>
 <td class="cap-rate-3">3%</td>
 <td class="cap-rate-3">
-<span id="myText6">&pound15,500</span>
+<span id="myText6">&pound15,400</span>
 </td>
 <td class="cap-rate-3">
 <span id="myText7">&pound33,400</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">&pound53,800</span>
+<span id="myText8">&pound53,900</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">&pound75,600</span>
+<span id="myText9">&pound75,800</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText10">&pound199,700</span>
+<span id="myText10">&pound200,200</span>
 </td>
 </tr>
 <tr>
@@ -94,19 +68,19 @@ font-size:14px;
 <span id="myText12">&pound19,200</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText13">&pound32,300</span>
+<span id="myText13">&pound32,400</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText14">&pound46,900</span>
+<span id="myText14">&pound47,100</span>
 </td>
 <td class="cap-rate-4">
-<span id="myText15">&pound33,300</span>
+<span id="myText15">&pound33,100</span>
 </td>
 </tr>
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 01 March 2022 at 17:00 UK time</p>
+<p style="text-align: center;">Last updated: 01 March 2022 at 17:15 UK time</p>
 </div>
 </div>
 </main>
