--- a/sample-table-3M.html
+++ b/sample-table-3M.html
@@ -7,6 +7,32 @@
 <link rel="dns-prefetch" href="https://fonts.gstatic.com/">
 <link href="/css" rel="stylesheet">
 </head>
+<style>
+th,td,body{
+white-space: nowrap;
+}
+@media only screen and (max-width: 400px) {
+th,td,body{
+white-space: nowrap;
+font-size:10px;
+}}
+@media only screen and (min-width:400px) and (max-width: 500px) {
+th,td{
+white-space: nowrap;
+font-size:14px;
+}
+body{
+font-size:12px;
+}}
+@media only screen and (min-width:500px) and (max-width: 600px) {
+th,td{
+white-space: nowrap;
+font-size:18px;
+}
+body{
+font-size:14px;
+}}
+</style>
 <body>
 <div id="app" class="d-flex flex-column h-100">
 <main class=" h-100">
@@ -15,11 +41,11 @@
 <thead>
 <tr>
 <th class="cap-rate">Cap rate</th>
-<th class="cap-duration">2-years</th>
-<th class="cap-duration">3-years</th>
-<th class="cap-duration">4-years</th>
-<th class="cap-duration">5-years</th>
-<th class="cap-duration">10-years</th>
+<th class="cap-duration">2 years</th>
+<th class="cap-duration">3 years</th>
+<th class="cap-duration">4 years</th>
+<th class="cap-duration">5 years</th>
+<th class="cap-duration">10 years</th>
 </tr>
 </thead>
 <tbody>
@@ -29,10 +55,10 @@
 <span id="myText1">&pound20,100</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText2">&pound39,300</span>
+<span id="myText2">&pound39,400</span>
 </td>
 <td class="cap-rate-2">
-<span id="myText3">&pound59,200</span>
+<span id="myText3">&pound59,300</span>
 </td>
 <td class="cap-rate-2">
 <span id="myText4">&pound80,000</span>
@@ -50,10 +76,10 @@
 <span id="myText7">&pound20,200</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText8">&pound32,300</span>
+<span id="myText8">&pound32,400</span>
 </td>
 <td class="cap-rate-3">
-<span id="myText9">&pound45,500</span>
+<span id="myText9">&pound45,600</span>
 </td>
 <td class="cap-rate-3">
 <span id="myText10">&pound120,200</span>
@@ -80,7 +106,7 @@
 </tbody>
 </table>
 <div>
-<p style="text-align: center;">Last updated: 01 March 2022 at 17:15 UK time</p>
+<p style="text-align: center;">Last updated: 01 March 2022 at 17:30 UK time</p>
 </div>
 </div>
 </main>
