--- a/capIncome.html
+++ b/capIncome.html
@@ -67,7 +67,7 @@ width:100%;
   </colgroup>
   <thead>
     <tr>
-      <th colspan="2">Annual Income From Cap-It Certificate</th> 
+      <th colspan="2">Cap Income Calculator</th> 
     </tr>
   </thead>
   <tbody>
