--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
 <style>
 body{
 background-color:#0173a3;
+font-family:'Nunito';
 }
 .center {
 margin: auto;
