--- a/capitIndexChart1Y.html
+++ b/capitIndexChart1Y.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
 <style>
 body{
 background-color:#0173a3;
+font-family:'Nunito';
 }
 .center {
 margin: auto;
@@ -352,7 +354,7 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>572.3</td>
+<td>572.1</td>
 <td class = "leftTextAlign">10 March 2022</td>
 </tr>
 <tr>
