--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='https://fonts.googleapis.com/css?family=Nunito' rel='stylesheet'>
 <style>
 body{
 background-color:#0173a3;
+font-family:'Nunito';
 }
 .center {
 margin: auto;
@@ -37,7 +39,6 @@ var data = new google.visualization.DataTable();
 data.addColumn('datetime', 'Time');
 data.addColumn('number', 'Cap-It Index');
 data.addRows([
-[new Date(2022,2,9,16,15,0),581.11],
 [new Date(2022,2,9,16,30,0),575.18],
 [new Date(2022,2,9,16,45,0),579.32],
 [new Date(2022,2,9,17,0,0),580.27],
@@ -93,7 +94,8 @@ data.addRows([
 [new Date(2022,2,10,15,15,0),577.79],
 [new Date(2022,2,10,15,30,0),580.03],
 [new Date(2022,2,10,15,45,0),578.18],
-[new Date(2022,2,10,15,45,0),578.18]
+[new Date(2022,2,10,16,0,0),572.3],
+[new Date(2022,2,10,16,0,0),572.3]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -146,8 +148,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>572.3</td>
-<td class = "leftTextAlign">10 March 2022 16:00</td>
+<td>572.1</td>
+<td class = "leftTextAlign">10 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
