--- a/capIncome.html
+++ b/capIncome.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html>
 
@@ -50,7 +51,9 @@ table.GeneratedTable thead {
 
 .label,.value{
 text-align: left;
+color:gray;
 }
+
 .output{
 color:green;
 font-weight:bold;
