--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -143,18 +143,18 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td>618.5</td>
-<td class = "leftTextAlign">14 March 2022 16:15</td>
+<td id="latest_index">618.5</td>
+<td id="latest-date" class = "leftTextAlign">14 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td>618.5</td>
-<td class = "leftTextAlign">14 March 2022 16:15</td>
+<td id="high-index">618.5</td>
+<td id="high-date" class = "leftTextAlign">14 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
-<td>586.7</td>
-<td class = "leftTextAlign">13 March 2022 18:00</td>
+<td id="low-index">586.7</td>
+<td id="low-date" class = "leftTextAlign">13 March 2022 18:00</td>
 </tr>
 </tbody>
 </table>
