--- a/capitIndexChart1Y.html
+++ b/capitIndexChart1Y.html
@@ -356,18 +356,18 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest_index">618.5</td>
-<td id="latest-date" class = "leftTextAlign">14 March 2022</td>
+<td>616</td>
+<td class = "leftTextAlign">14 March 2022</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">618.5</td>
-<td id="high-date" class = "leftTextAlign">14 March 2022</td>
+<td>618.5</td>
+<td class = "leftTextAlign">14 March 2022</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
-<td id="low-index">124.5</td>
-<td id="low-date" class = "leftTextAlign">24 March 2021</td>
+<td>124.5</td>
+<td class = "leftTextAlign">24 March 2021</td>
 </tr>
 </tbody>
 </table>
