--- a/Eligibility-Test.html
+++ b/Eligibility-Test.html
@@ -29,7 +29,7 @@
 
 
                             
-                        <h2>Appropriateness test</h2>
+                        <h2>Eligibility test</h2>
         <form action="https://members.capit.co.uk/tests/2" method="post">
         <input type="hidden" name="_token" value="rZFU9U2r2Cvz2QYBCG3i27nGFGuaMPBc1jutapqw">        <ol class="
             form-group
