--- a/Eligibility-Test.html
+++ b/Eligibility-Test.html
@@ -218,7 +218,7 @@
                                     </li>
                             <li class="pb-4 ml-0 pl-3">
                     <header class="pb-2 text-dark-grey">
-                        What is the main risk of an interest rate cap or a Cap-It Certificate?
+                        What is the main risk of a Cap-It Certificate?
                         <a href="https://www.capit.co.uk/glossary/what-are-the-risks-of-a-cap-it-certificate/" class="btn btn-primary btn-sm ml-2">FAQ</a>                    </header>
                                                                     <div class="radio-wrapper ">
                             <div class="custom-control custom-radio py-1">
