--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -89,7 +89,8 @@ data.addRows([
 [new Date(2022,2,21,15,15,0),571.79],
 [new Date(2022,2,21,15,30,0),572.48],
 [new Date(2022,2,21,15,45,0),571.87],
-[new Date(2022,2,21,15,45,0),571.87]
+[new Date(2022,2,21,16,0,0),572.59],
+[new Date(2022,2,21,16,0,0),572.59]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -142,13 +143,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">572.6</td>
-<td id="latest-date" class = "leftTextAlign">21 March 2022 16:00</td>
+<td id="latest-index">575.9</td>
+<td id="latest-date" class = "leftTextAlign">21 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">573.5</td>
-<td id="high-date" class = "leftTextAlign">21 March 2022 15:00</td>
+<td id="high-index">575.9</td>
+<td id="high-date" class = "leftTextAlign">21 March 2022 16:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
