--- a/capIncome.html
+++ b/capIncome.html
@@ -97,7 +97,7 @@ width:100%;
       <td class = "value" id="benchmark-interest-rate-input-display">1%</td>  
     </tr>
     <tr>
-      <td class = "label" colspan="2">Annual income</td> 
+      <td class = "label" colspan="2">Annual cap income</td> 
     </tr>
     <tr>
       <td class = "output" colspan="2" id="annual-income-output">£0</td>  
