--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -68,7 +68,8 @@ data.addRows([
 [new Date(2022,2,28,8,15,0),656.66],
 [new Date(2022,2,28,8,30,0),657.9],
 [new Date(2022,2,28,8,45,0),657.25],
-[new Date(2022,2,28,8,45,0),657.25]
+[new Date(2022,2,28,9,0,0),663.64],
+[new Date(2022,2,28,9,0,0),663.64]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -121,13 +122,13 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">663.6</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 09:00</td>
+<td id="latest-index">667.6</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 09:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
-<td id="high-index">663.6</td>
-<td id="high-date" class = "leftTextAlign">28 March 2022 09:00</td>
+<td id="high-index">667.6</td>
+<td id="high-date" class = "leftTextAlign">28 March 2022 09:15</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">Low:</td>
