--- a/capitIndexChart1D.html
+++ b/capitIndexChart1D.html
@@ -87,7 +87,8 @@ data.addRows([
 [new Date(2022,2,28,14,30,0),629.87],
 [new Date(2022,2,28,14,45,0),632.32],
 [new Date(2022,2,28,15,0,0),636],
-[new Date(2022,2,28,15,0,0),636]
+[new Date(2022,2,28,15,15,0),634.54],
+[new Date(2022,2,28,15,15,0),634.54]
 ]);
 var date_formatter = new google.visualization.DateFormat({
 pattern: "dd MMMM yyyy HH:mm"
@@ -140,8 +141,8 @@ drawChart();
 <tbody>
 <tr>
 <td class = "rightTextAlign">Latest:</td>
-<td id="latest-index">634.5</td>
-<td id="latest-date" class = "leftTextAlign">28 March 2022 15:15</td>
+<td id="latest-index">633.3</td>
+<td id="latest-date" class = "leftTextAlign">28 March 2022 15:30</td>
 </tr>
 <tr>
 <td class = "rightTextAlign">High:</td>
